--- a/src/style.css
+++ b/src/style.css
@@ -4,34 +4,56 @@
   font-style: normal;
   color: aliceblue;
 }
+
 html,
 body {
+  display: grid;
   margin: 0;
   padding: 0;
   background-image: url(./assets/starry.gif);
   background-size: cover;
 }
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
+  grid-gap: ;
+}
 .header {
+  grid-row: 1;
+  grid-column: span 2;
   display: flex;
   align-items: center;
   height: 125px;
-  width: 100%;
   background-color: #21167d;
   color: aliceblue;
   justify-content: center;
   margin-top: 2vw;
 }
+
 #welcome {
   font-family: 'Rowdies';
 }
+
 .about {
-  width: 200px;
-  height: 200px;
+  grid-row: 2;
+  grid-column: 1;
+  width: 54vw;
   background-color: #21167d;
-  margin-left: 3vw;
+  margin-left: 5vw;
   margin-top: 2vw;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   align-items: center;
+  padding: 3vw;
+}
+
+.contact {
+  grid-row: 2;
+  grid-column: 2;
+  background-color: #21167d;
+  color: aliceblue;
+  width: fit-content;
+  height: fit-content;
+  margin: 2vw;
 }
