--- a/src/style.css
+++ b/src/style.css
@@ -11,13 +11,14 @@ body {
   margin: 3px;
   padding: 0;
   background-image: url(./assets/starry.gif);
-  background-size: cover;
+  background-size: initial;
+  background-attachment: fixed;
 }
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
-  grid-gap: 9px;
+  grid-gap: 2.3vw;
 }
 .header {
   grid-row: 1;
@@ -34,6 +35,7 @@ body {
 
 #welcome {
   font-family: 'Rowdies';
+  border-bottom: 2px black solid;
 }
 
 .about {
@@ -76,4 +78,14 @@ body {
   padding-bottom: 3vw;
   list-style: none;
   border-radius: 10%;
+}
+.projects {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.project {
+  background-color: #21167d;
+  height: 300px;
+  width: 300px;
+  border: 2px solid black;
 }
