--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr;
   grid-gap: 2.3vw;
 }
 .header {
@@ -53,7 +53,7 @@ body {
 
 .contact {
   grid-row: 2;
-  grid-column: 2;
+  grid-column: span 2;
   width: fit-content;
   height: fit-content;
 }
@@ -80,8 +80,14 @@ body {
   border-radius: 10%;
 }
 .projects {
+  grid-row: 3;
+  grid-column: 1/3;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  width: 99vw;
+  grid-gap: 5px;
 }
 .project {
   background-color: #21167d;
